# render

./: CMakeLists.txt  Readme.md  bug.md  gl.cpp  gl.h  main.cpp  test.cpp  thinking.md
.cache/clangd/index/: Matrix.hpp.131F11BB77D9BB87.idx  Render.cpp.0FF60DC8D2B2D716.idx  Render.h.652285977F604ADE.idx  Scene.cpp.A9B80D5FD2D9EB63.idx  Scene.h.E961CC3D065B89DA.idx  camera.cpp.B33F8A2581449E5A.idx  camera.h.299A9691980301A3.idx  config.h.AC40AB1F150D7127.idx  glfw3.h.E956F5D070FA544F.idx  glfw3native.h.7EFACC2858759072.idx  main.cpp.96ADB5AE5405ED0E.idx  maths.hpp.DD116B13FB517588.idx  model.cpp.EE81B101E82AF8E0.idx  model.h.485122AD472990EA.idx  pch.h.8C431DF22725FADB.idx  shader.hpp.D55EBE6189A4C550.idx  tgaimage.cpp.2F1E5F51F584DF83.idx  tgaimage.h.DE58E1237C422342.idx  util.h.FCD7015B43366B70.idx  window.cpp.9DC27DABCFC101FD.idx  window.h.54F357269DACDF1E.idx
assets/json/: floor.json  head.json
src/: Perlin.hpp  config.h  main.cpp  model.cpp  model.h  pch.h  texture.hpp  tgaimage.cpp  tgaimage.h  util.h  util.hpp
src/Engine/: Render.cpp  Render.h  Tracer.cpp  Tracer.h  gl.cpp  gl.h
src/Engine/Model/: BVH.hpp  Intersection.hpp  Light.hpp  Material.hpp  Ray.hpp  model.cpp  model.h
src/Engine/Scene/: Scene.cpp  Scene.h
src/Engine/camera/: camera.cpp  camera.h
src/GL/: gl.cpp
src/Shader/: shader.hpp
src/maths/: Matrix.hpp  maths.hpp
src/tools/: AABB.hpp  draw.hpp  image.hpp  load.hpp
src/ui/: window.cpp  window.h
